--- a/web1/src/app/inventory/location-tracker/location-tracker.component.html
+++ b/web1/src/app/inventory/location-tracker/location-tracker.component.html
@@ -12,6 +12,25 @@
                         <!-- form start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm" >
                             <div class="row">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                                    <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                      <mat-label>Shop Name</mat-label>
+                                      <mat-select name="shopID" [(ngModel)]="data1.ShopID" >
+                                        <mat-option [value]=0>All</mat-option>
+                                        <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                                          <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                        </mat-option>
+                                      </mat-select>
+                                    </mat-form-field>
+                                    <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                      <mat-label>Shop Name</mat-label>
+                                      <mat-select name="shopID" [(ngModel)]="data1.ShopID">
+                                        <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                                          <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                        </mat-option>
+                                      </mat-select>
+                                    </mat-form-field>
+                                  </div>
                                 <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
@@ -19,6 +38,16 @@
                                             #Barcodecontrol>
                                         <mat-error>
                                             Barcode required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Product Search</mat-label>
+                                        <input matInput name="ProductSearch" [(ngModel)]="Productsearch"
+                                            #ProductSearchcontrol>
+                                        <mat-error>
+                                            ProductSearch required
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
@@ -97,8 +126,8 @@
                                     </div>
                                 </div>
                                 <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-12  mb-3 ">
-                                    <button type="submit" mat-raised-button color="primary">Search</button>
-                                    <button type="submit" mat-raised-button color="warn" class="ms-3 me-3">Reset</button>
+                                    <button type="button" (click)="getList()" mat-raised-button color="primary">Search</button>
+                                    <button type="button" mat-raised-button color="warn" class="ms-3 me-3" (click)="Reset()">Reset</button>
                                 </div>
                             </div>
                         </form>
@@ -112,43 +141,48 @@
                                             <thead>
                                                 <tr style="white-space: nowrap;">
                                                     <th>S No.</th>
-                                                    <th>Available</th>
-                                                    <th>Physical Ava</th>
-                                                    <th>Barcode</th>
+                                                    <th> TotalQty</th>
+                                                    <th> Unloacted</th>
+                                                    <th> Located</th>
                                                     <th>Product Category</th>
                                                     <th>Product Name</th>
-                                                    <th>BrandType</th>
-                                                    <th>PurchaseDate</th>
-                                                    <th>Quantity</th>
-                                                    <th>Current Shop</th>
-                                                    <th>Status</th>
-                                                    <th>Supplier</th>
-                                                    <th>Unit Price</th>
-                                                    <th>Dis%</th>
-                                                    <th>TAX%</th>
-                                                    <th>TAX Type</th>
+                                                    <th>Barcode</th>
                                                     <th>Retail Price</th>
                                                     <th>WholeSale Price</th>
+                                                    <th>Current Shop</th>
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                               <tr></tr>
+                                                <tr  *ngFor="let data of dataList; let i = index" text="left">
+                                                    <td>{{i+1}} <button (click)="openModal(content,data)">Add</button></td>
+                                                    <td>{{data.TotalQty}}</td>
+                                                    <td>{{data.Unloacted}}</td>
+                                                    <td>{{data.Located}}</td>
+                                                    <td>{{data.ProductTypeName}}</td>
+                                                    <td>{{data.ProductName}}</td>
+                                                    <td>{{data.Barcode}}</td>
+                                                    <td>{{data.RetailPrice}}</td>
+                                                    <td>{{data.WholeSalePrice}}</td>
+                                                    <td>{{data.ShopName}}</td>
+                                               </tr>
                                             </tbody>
-                                           
                                         </table>
-                                        <table  class="table table-striped table-hover table-sm table-bordered mx-auto"
-                                        style=" width: 50%; white-space: nowrap;" id="CaseConExcel">
-                                        <tfoot class="hide-on-print">
+                                </div>
+
+                                 <div  class="col-sm-6 mx-auto" *ngIf="dataList.length != 0">
+                                    <table id="print-content" class="table table-striped table-hover table-sm table-bordered"
+                                        style="border: 2px solid #ff1d1d !important; width: 100%;" id="CaseConExcel">
+                                        <thead >
                                             <tr style="background-color: #dcdcdc;">
-                                                <th style="border: 1px solid #ff1d1d;" > Total Qty - </th>
-                                                <th style="border: 1px solid #ff1d1d;">  Located Qty - </th>
-                                                <th style="border: 1px solid #ff1d1d;">  Unlocated Qty - </th>
-                                              
+                                                <th style="border: 1px solid #ff1d1d;" > Total  Qty - </th>
+                                                <th style="border: 1px solid #ff1d1d;"> Located Qty - </th>
+                                                <th style="border: 1px solid #ff1d1d;"> Unlocated Qty - </th>
                                             </tr>
-                                        </tfoot>
+                                        </thead>
                                     </table>
                                 </div>
                             </div>
+                            
                         </form>
                         <!-- list end -->
                     </div>
@@ -157,3 +191,110 @@
         </div>
     </div>
 </section>
+
+
+<!-- Modal -->
+<ng-template #content role="document" let-modal>
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel">Located Product</h2>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body p-0">
+      <form #f4="ngForm" (ngSubmit)="savelocation()">
+        <div class="modal-body">
+            <div class="row">
+                <div class="col-xl-4 col-lg-4 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Product Name</mat-label>
+                        <input matInput name="ProductName" [(ngModel)]="located.ProductName" disabled
+                            #TOutstandingcontrol >
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Barcode</mat-label>
+                        <input  matInput name="Barcode" [(ngModel)]="located.Barcode" disabled
+                            #TOutstandingcontrol >
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-4 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Total Qty</mat-label>
+                        <input   matInput name="TotalQty" [(ngModel)]="located.TotalQty" disabled
+                            #TOutstandingcontrol >
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-4 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Located</mat-label>
+                        <input   matInput name="Located" [(ngModel)]="located.Located" disabled
+                            #TOutstandingcontrol >
+                    </mat-form-field>
+                </div>
+                <div class="col-xl-2 col-lg-2 col-md-3 col-4 mb-0">
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Unlocated</mat-label>
+                        <input   matInput name="Unloacted" [(ngModel)]="located.Unloacted" disabled
+                            #TOutstandingcontrol >
+                    </mat-form-field>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-0">
+                                <mat-form-field class="example-full-width mb-0" >
+                                    <mat-label>Location</mat-label>
+                                    <mat-select name="LocationID" [(ngModel)]="located.LocationID" required>
+                                      <mat-option [value]="l.ID" *ngFor="let l of locationList"> {{l.Name}}</mat-option>
+                                    </mat-select>
+                                  </mat-form-field>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>Qty</mat-label>
+                                    <input matInput name="Qty" [(ngModel)]="located.Qty" 
+                                        #TOutstandingcontrol required>
+                                </mat-form-field>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-12 mb-0">
+                             <button type="submit" mat-raised-button color="primary" [disabled]="!btnDis">Add</button>
+                             <button type="button" (click)="updatelocation()" [disabled]="btnDis"  mat-raised-button color="warn" class="ms-2">Update</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6" style="overflow: auto; height: 200px;">
+                    <table class="table table-responsive table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;">
+                        <thead>
+                            <tr style="white-space: nowrap;">
+                                <th>S No.</th>
+                                <th>Location</th>
+                                <th>Qty</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr  *ngFor="let data of locatedList; let i = index" text="left">
+                                <td>{{i+1}} 
+                                    <button type="button" class="bg-btn" (click)="deleteProductLocation(data)" >
+                                        <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
+                                    </button> 
+                                    <button type="button" class="bg-btn" (click)="edit(data)">
+                                        <mat-icon class="edit_icon ms-1">edit</mat-icon>
+                                    </button>
+                                </td>
+                                <td>{{data.LocationName}}</td>
+                                <td>{{data.Qty}}</td>
+                               
+                           </tr>
+                        </tbody>
+                    </table>
+            </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </form>
+    </div>
+  </ng-template>
