--- a/web1/src/app/inventory/location-tracker/location-tracker.component.html
+++ b/web1/src/app/inventory/location-tracker/location-tracker.component.html
@@ -279,7 +279,7 @@
                         <tbody class="text-center">
                             <tr  *ngFor="let data of locatedList; let i = index" text="left">
                                 <td>{{i+1}} 
-                                    <button type="button" class="bg-btn" (click)="deleteProductLocation(data)" >
+                                    <button type="button" class="bg-btn" (click)="deleteProductLocation(i)" >
                                         <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                                     </button> 
                                     <button type="button" class="bg-btn" (click)="edit(data)">
