--- a/web1/src/app/inventory/location-tracker/location-tracker.component.html
+++ b/web1/src/app/inventory/location-tracker/location-tracker.component.html
@@ -271,6 +271,7 @@
                         style="border: 2px solid #fff !important;">
                         <thead>
                             <tr style="white-space: nowrap;">
+                                <th>Action</th>
                                 <th>S No.</th>
                                 <th>Location</th>
                                 <th>Qty</th>
@@ -278,7 +279,7 @@
                         </thead>
                         <tbody class="text-center">
                             <tr  *ngFor="let data of locatedList; let i = index" text="left">
-                                <td>{{i+1}} 
+                                <td>
                                     <button type="button" class="bg-btn" (click)="deleteProductLocation(i)" >
                                         <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                                     </button> 
@@ -286,6 +287,7 @@
                                         <mat-icon class="edit_icon ms-1">edit</mat-icon>
                                     </button>
                                 </td>
+                                <td>{{i+1}} </td>
                                 <td>{{data.LocationName}}</td>
                                 <td>{{data.Qty}}</td>
                                
