--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1910,7 +1910,7 @@
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Total Qty</mat-label>
+                        <mat-label>Total Sell Qty</mat-label>
                         <input   matInput name="qty" [(ngModel)]="BillItem.Quantity" disabled
                             #Quantitycontrol >
                     </mat-form-field>
