--- a/web1/src/app/inventory/purchase/purchase.component.html
+++ b/web1/src/app/inventory/purchase/purchase.component.html
@@ -778,7 +778,7 @@
                                         color="primary">PrintBarcode</button>
                                 </div>
                                 <div *ngIf="id == 0" class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0 ml-auto">
-                                    <button  [disabled]="itemList.length == 0 || id != 0" mat-raised-button
+                                    <button type="submit" [disabled]="itemList.length == 0 || id != 0" mat-raised-button
                                         color="primary">Save
                                     </button>
                                 </div>
