--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -343,7 +343,7 @@
                                     <%}%> 
                                     <div
                                         style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
-                                        <%=i.ProductBrandName%>
+                                        <%=i.ProductModelName%>
                                     </div>
                                     <div
                                         style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
