--- a/web1/src/app/inventory/supplier/supplier.component.css
+++ b/web1/src/app/inventory/supplier/supplier.component.css
@@ -2,7 +2,13 @@
 .mat-icon {
     pointer-events: none !important;
   }
+  .mat-icon {
+    pointer-events: none;
+  }
 
+  i {
+    pointer-events: none;
+  }
 .bg-none{
     background-color: rgba(0, 0, 0, 0);
     border: none;
