--- a/web1/src/app/common/login.component.css
+++ b/web1/src/app/common/login.component.css
@@ -6,7 +6,7 @@ body {
 }
 
 .Bgm{
-  background-image: url(../../assets/images/ram.png);
+  /* background-image: url(../../assets/images/ram.png); */
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 100vh;
@@ -975,7 +975,7 @@ html {
 
 @media only screen and (max-width: 512px) and (min-width: 300px) {
   .Bgm {
-    background-image: url(../../assets/images/ram.png);
+    /* background-image: url(../../assets/images/ram.png); */
     background-repeat: no-repeat;
     background-size: 100% 21% !important;
     height: 0vh !important;
